fixed footer causing horizontal scrolling

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,7 +3,7 @@ footer {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 25px;
+  padding: 25px 0;
   background-color: black;
   width: 100vw;
 }
